Thu Jul 20 17:51:54 1995  David Lamkin  <drl@net-tel.co.uk>

	* client.c (short_pathname): Fixes the fetching of the whole file
	after a patch to bring it up to date has failed:
	   - failed_patches[] now holds short path to file that failed
	   - patch temp files are unlinked where the patch is done

Thu Jul 20 12:37:10 1995  James Kingdon  <kingdon@harvey.cyclic.com>

	* cvs.h: Declare error_set_cleanup
	* main.c: Call it.
	(error_cleanup): New function.

Thu Jul 20 12:17:16 1995  Mark H. Wilkinson  <mhw@minster.york.ac.uk>

	* add.c, admin.c, checkin.c, checkout.c, classify.c, client.c,
	client.h, commit.c, create_adm.c, cvs.h, diff.c, entries.c,
	history.c, import.c, log.c, main.c, modules.c, no_diff.c, patch.c,
	release.c, remove.c, repos.c, rtag.c, server.c, server.h,
	status.c, subr.c, tag.c, update.c, vers_ts.c, version.c: Put
	client code inside #ifdef CLIENT_SUPPORT, server code inside
	#ifdef SERVER_SUPPORT.  When reporting version, report whether
	client and/or server are compiled in.

Fri Jul 14 22:28:46 1995  Jim Blandy  <jimb@totoro.cyclic.com>

	* server.c (dirswitch, serve_static_directory, serve_sticky,
	serve_lost, server_write_entries, serve_checkin_prog,
	serve_update_prog): Include more information in error messages.
	(Thanks, DJM.)

	* cvsbug.sh: Use /usr/sbin/sendmail, unless it doesn't
	exist, in which case use /usr/lib/sendmail.  (Thanks, DJM.)

	* server.c (server, server_cleanup): Use "/tmp" instead of
	"/usr/tmp" when the TMPDIR environment variable isn't set.  This
	is what the rest of the code uses.

Thu Jul 13 11:03:17 1995  Jim Meyering  (meyering@comco.com)

	* recurse.c (free_cwd): New function.
	(save_cwd, restore_cwd): Use it instead of simply freeing any
	string.  The function also closes any open file descriptor.

	* import.c (comtable): Now static.
	(comtable): Put braces around each element of initializer.

	* cvs.h: Add prototype for xgetwd.
	* recurse.c (save_cwd, restore_cwd): New functions to encapsulate